fixed showcase spacing

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -94,9 +94,10 @@ a {
   }
   .showcase {
     grid-template-columns: 10% 1fr 10%;
+    grid-template-rows: 1fr 1fr 1fr;
     img {
-      width: 100%;
       object-fit: contain;
+      width: 100%;
     }
     img,
     h2,
